--- a/AI-Models/t1-model (1).ipynb
+++ b/AI-Models/t1-model (1).ipynb
@@ -1,1 +1,316 @@
-{"metadata":{"kernelspec":{"language":"python","display_name":"Python 3","name":"python3"},"language_info":{"pygments_lexer":"ipython3","nbconvert_exporter":"python","version":"3.6.4","file_extension":".py","codemirror_mode":{"name":"ipython","version":3},"name":"python","mimetype":"text/x-python"},"kaggle":{"accelerator":"none","dataSources":[],"isInternetEnabled":true,"language":"python","sourceType":"notebook","isGpuEnabled":false}},"nbformat_minor":4,"nbformat":4,"cells":[{"cell_type":"code","source":"import numpy as np\nfrom math import radians, sin, cos, sqrt, atan2\n\n# Initial reference behavioral vector (D_ref) and user context\nD_ref = np.array([79, 330, 9, 278, 74, 5, 34.32, 13, 154, 23], dtype=np.float32)\nage = 65\nidle_threshold = 3\nidle_count = 0\ntravel_flag = 0\n\n# Locations\nlast_login_loc = (28.7041, 77.1025) #pevious session waali\ncurrent_loc    = (28.7041, 77.1025)\n#ye woh 30 sec waali location update\nprev_loc       = (28.5355, 77.3910)\nlatest_loc     = (28.5355, 77.3910)\n\n# New 30s feature vector\nv = np.array([79, 320, 9, 278, 74, 5, 34.32, 13, 155, 23], dtype=np.float32)\n\n# EMA (exponential moving averages ) parameters\nalpha_mean = 0.05\nalpha_std = 0.02\ndistance_update_threshold = 1.5  # taaki outliers use na ho update ke liye\n\n\ndef haversine(lat1, lon1, lat2, lon2):\n    R = 6371.0\n    dlat, dlon = radians(lat2-lat1), radians(lon2-lon1)\n    a = sin(dlat/2)**2 + cos(radians(lat1)) * cos(radians(lat2)) * sin(dlon/2)**2\n    return 2 * atan2(sqrt(a), sqrt(1 - a)) * R\n\ndef estimate_std(D):\n    return np.maximum(1e-2, np.abs(D * 0.10))  # 10% static tolerance\n\ndef compute_anomaly_score(v, D, D_std, age):\n    if np.count_nonzero(v) < 4:\n        return None, None\n    z = np.abs((v - D) / (D_std + 1e-8))\n    base_score = np.mean(z)\n    if age >= 60:\n        base_score *= 1.15\n    return base_score, z\n\ndef rule_based_checks(v, last_loc, curr_loc, prev_loc, latest_loc):\n    flags = []\n\n    # 1) Login location jump\n    dist_login = haversine(*last_loc, *curr_loc)\n    if dist_login > 10:\n        flags.append(\"Unusual login distance (>10km)\")\n\n    # 2) Travel speed during 30s\n    dist_session = haversine(*prev_loc, *latest_loc)\n    speed_kmh = dist_session / (30/3600)\n    if speed_kmh > 80:\n        flags.append(f\"Abnormal session speed ({speed_kmh:.1f} km/h)\")\n\n    # 3) Behavioral extremes\n    if v[0] != 0 and v[0] < 50:\n        flags.append(\"Suspicious accuracy\")\n    if v[1] != 0 and v[1] > 600:\n        flags.append(\"Flight time too high\")\n    if v[5] != 0 and v[5] > 10:\n        flags.append(\"Error rate too high\")\n\n    # 4) Low activity\n    if np.count_nonzero(v) < 6:\n        flags.append(\"Low activity this interval\")\n\n    return flags, speed_kmh\n\ndef update_reference(D_ref, D_std, v, alpha_mean, alpha_std):\n    # EMA update\n    new_D_ref = alpha_mean * v + (1 - alpha_mean) * D_ref\n    new_D_std = alpha_std * np.abs(v - new_D_ref) + (1 - alpha_std) * D_std\n    return new_D_ref, new_D_std\n\ndef safe_to_update(v, D, D_std):\n    if np.count_nonzero(v) < 6:\n        return False\n    z = np.abs((v - D) / (D_std + 1e-8))\n    score = np.mean(z)\n    return score < distance_update_threshold\n\n\n# Compute std\nD_std = estimate_std(D_ref)\n\n# Anomaly score and flags\nan_score, z_scores = compute_anomaly_score(v, D_ref, D_std, age)\nflags, speed = rule_based_checks(v, last_login_loc, current_loc, prev_loc, latest_loc)\n\n# Thresholds\nT_PASS = 1.5\nT_ESC_T2 = 2.5\n\n# Decision logic\nif an_score is None:\n    idle_count += 1\n    if idle_count >= idle_threshold and speed > 80:\n        decision = \"ESCALATE TO T2 (idle + fast travel)\"\n    else:\n        decision = \"SKIP INTERVAL (idle)\"\nelse:\n    idle_count = 0\n    if an_score < T_PASS and not flags:\n        decision = \"PASS\"\n    elif an_score < T_ESC_T2 or flags:\n        decision = \"ESCALATE TO T2\"\n    else:\n        decision = \"ESCALATE TO T3\"\n\n# Update reference (only if PASS and valid)\nif decision == \"PASS\" and safe_to_update(v, D_ref, D_std):\n    D_ref, D_std = update_reference(D_ref, D_std, v, alpha_mean, alpha_std)\n    print(f\"✔️ Reference profile updated.\\n New D_ref:{D_ref}\\n New D_std:{D_std}\")\n\n# Output\nprint(f\"\\nv:           {v}\")\nprint(f\"z-scores:    {z_scores.round(2) if z_scores is not None else 'N/A'}\")\nprint(f\"anomaly:     {an_score:.2f}\" if an_score else \"anomaly: N/A\")\nprint(f\"flags:       {flags}\")\nprint(f\"decision:    {decision}\")","metadata":{"trusted":true},"outputs":[],"execution_count":null}]}
+{
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "trusted": true
+   },
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "from math import radians, sin, cos, sqrt, atan2\n",
+    "import json\n",
+    "\n",
+    "class BehavioralAuthenticator:\n",
+    "    def __init__(self):\n",
+    "        # Initialize reference behavioral vector (will be updated from user profile)\n",
+    "        self.D_ref = np.array([79, 330, 9, 278, 74, 5, 34.32, 13, 154, 23], dtype=np.float32)\n",
+    "        self.age = 65  # Will be updated from user profile\n",
+    "        self.idle_threshold = 3\n",
+    "        self.idle_count = 0\n",
+    "        self.travel_flag = 0\n",
+    "        \n",
+    "        # EMA parameters\n",
+    "        self.alpha_mean = 0.05\n",
+    "        self.alpha_std = 0.02\n",
+    "        self.distance_update_threshold = 1.5\n",
+    "        \n",
+    "        # Thresholds\n",
+    "        self.T_PASS = 1.5\n",
+    "        self.T_ESC_T2 = 2.5\n",
+    "        \n",
+    "        # Location tracking\n",
+    "        self.last_login_loc = None\n",
+    "        self.current_loc = None\n",
+    "        self.prev_loc = None\n",
+    "        self.latest_loc = None\n",
+    "    \n",
+    "    def extract_behavioral_vector(self, sensor_data):\n",
+    "        \"\"\"\n",
+    "        Extract behavioral vector from React Native sensor data\n",
+    "        \"\"\"\n",
+    "        try:\n",
+    "            typing_stats = sensor_data.get('typingStats', {})\n",
+    "            device_metrics = sensor_data.get('deviceMetrics', {})\n",
+    "            interaction_stats = sensor_data.get('interactionStats', {})\n",
+    "            behavioral_metrics = sensor_data.get('behavioralMetrics', {})\n",
+    "            \n",
+    "            # Map React Native data to T1 model vector format\n",
+    "            # v = [accuracy, flight_time, errors, typing_speed, consistency, error_rate, \n",
+    "            #      avg_key_hold, keystrokes, avg_latency, backspace_count]\n",
+    "            \n",
+    "            v = np.array([\n",
+    "                typing_stats.get('accuracy', 0),                    # 0: Typing accuracy\n",
+    "                typing_stats.get('averageFlightTime', 0),          # 1: Flight time\n",
+    "                typing_stats.get('errors', 0),                     # 2: Error count\n",
+    "                typing_stats.get('typingSpeed', 0),                # 3: Typing speed\n",
+    "                typing_stats.get('consistency', 0),                # 4: Consistency\n",
+    "                typing_stats.get('errorRate', 0),                  # 5: Error rate\n",
+    "                typing_stats.get('averageKeyHoldTime', 0),         # 6: Key hold time\n",
+    "                typing_stats.get('keystrokes', 0),                 # 7: Total keystrokes\n",
+    "                typing_stats.get('averageKeyboardLatency', 0),     # 8: Keyboard latency\n",
+    "                typing_stats.get('backspaceCount', 0)              # 9: Backspace count\n",
+    "            ], dtype=np.float32)\n",
+    "            \n",
+    "            # Extract location data\n",
+    "            gps_location = device_metrics.get('gpsLocation')\n",
+    "            if gps_location:\n",
+    "                self.latest_loc = (gps_location.get('latitude', 0), gps_location.get('longitude', 0))\n",
+    "                if self.prev_loc is None:\n",
+    "                    self.prev_loc = self.latest_loc\n",
+    "            \n",
+    "            return v\n",
+    "            \n",
+    "        except Exception as e:\n",
+    "            print(f\"Error extracting behavioral vector: {e}\")\n",
+    "            return np.zeros(10, dtype=np.float32)\n",
+    "    \n",
+    "    def haversine(self, lat1, lon1, lat2, lon2):\n",
+    "        \"\"\"Calculate distance between two GPS coordinates\"\"\"\n",
+    "        R = 6371.0\n",
+    "        dlat, dlon = radians(lat2-lat1), radians(lon2-lon1)\n",
+    "        a = sin(dlat/2)**2 + cos(radians(lat1)) * cos(radians(lat2)) * sin(dlon/2)**2\n",
+    "        return 2 * atan2(sqrt(a), sqrt(1 - a)) * R\n",
+    "    \n",
+    "    def estimate_std(self, D):\n",
+    "        \"\"\"Estimate standard deviation for behavioral metrics\"\"\"\n",
+    "        return np.maximum(1e-2, np.abs(D * 0.10))  # 10% static tolerance\n",
+    "    \n",
+    "    def compute_anomaly_score(self, v, D, D_std, age):\n",
+    "        \"\"\"Compute anomaly score based on behavioral deviation\"\"\"\n",
+    "        if np.count_nonzero(v) < 4:\n",
+    "            return None, None\n",
+    "        \n",
+    "        z = np.abs((v - D) / (D_std + 1e-8))\n",
+    "        base_score = np.mean(z)\n",
+    "        \n",
+    "        # Age-based adjustment\n",
+    "        if age >= 60:\n",
+    "            base_score *= 1.15\n",
+    "            \n",
+    "        return base_score, z\n",
+    "    \n",
+    "    def rule_based_checks(self, v, sensor_data):\n",
+    "        \"\"\"Enhanced rule-based checks using React Native sensor data\"\"\"\n",
+    "        flags = []\n",
+    "        speed_kmh = 0\n",
+    "        \n",
+    "        # Extract additional context from sensor data\n",
+    "        screen_info = sensor_data.get('screenInfo', {})\n",
+    "        interaction_stats = sensor_data.get('interactionStats', {})\n",
+    "        \n",
+    "        # 1) Login location jump\n",
+    "        if self.current_loc and self.last_login_loc:\n",
+    "            dist_login = self.haversine(*self.last_login_loc, *self.current_loc)\n",
+    "            if dist_login > 10:\n",
+    "                flags.append(f\"Unusual login distance ({dist_login:.1f}km)\")\n",
+    "        \n",
+    "        # 2) Travel speed during session\n",
+    "        if self.prev_loc and self.latest_loc:\n",
+    "            dist_session = self.haversine(*self.prev_loc, *self.latest_loc)\n",
+    "            session_duration = screen_info.get('sessionDuration', 30)\n",
+    "            speed_kmh = dist_session / (session_duration / 3600) if session_duration > 0 else 0\n",
+    "            \n",
+    "            if speed_kmh > 80:\n",
+    "                flags.append(f\"Abnormal session speed ({speed_kmh:.1f} km/h)\")\n",
+    "        \n",
+    "        # 3) Behavioral extremes from typing data\n",
+    "        if v[0] != 0 and v[0] < 50:  # Accuracy too low\n",
+    "            flags.append(\"Suspicious typing accuracy\")\n",
+    "        \n",
+    "        if v[1] != 0 and v[1] > 600:  # Flight time too high\n",
+    "            flags.append(\"Flight time too high\")\n",
+    "        \n",
+    "        if v[5] != 0 and v[5] > 10:  # Error rate too high\n",
+    "            flags.append(\"Error rate too high\")\n",
+    "        \n",
+    "        # 4) Low activity detection\n",
+    "        if np.count_nonzero(v) < 6:\n",
+    "            flags.append(\"Low activity this interval\")\n",
+    "        \n",
+    "        # 5) Interaction pattern anomalies\n",
+    "        typing_activity = interaction_stats.get('typingActivity', {})\n",
+    "        if not typing_activity.get('isCurrentlyTyping', False) and screen_info.get('isActivelyTyping', False):\n",
+    "            flags.append(\"Inconsistent typing state\")\n",
+    "        \n",
+    "        # 6) Device-based anomalies\n",
+    "        device_metrics = sensor_data.get('deviceMetrics', {})\n",
+    "        network_info = device_metrics.get('networkInfo', {})\n",
+    "        if not network_info.get('isConnected', True):\n",
+    "            flags.append(\"Network connectivity issues\")\n",
+    "        \n",
+    "        return flags, speed_kmh\n",
+    "    \n",
+    "    def safe_to_update(self, v, D, D_std):\n",
+    "        \"\"\"Check if it's safe to update reference profile\"\"\"\n",
+    "        if np.count_nonzero(v) < 6:\n",
+    "            return False\n",
+    "        \n",
+    "        z = np.abs((v - D) / (D_std + 1e-8))\n",
+    "        score = np.mean(z)\n",
+    "        return score < self.distance_update_threshold\n",
+    "    \n",
+    "    def update_reference(self, D_ref, D_std, v, alpha_mean, alpha_std):\n",
+    "        \"\"\"Update reference behavioral profile using EMA\"\"\"\n",
+    "        new_D_ref = alpha_mean * v + (1 - alpha_mean) * D_ref\n",
+    "        new_D_std = alpha_std * np.abs(v - new_D_ref) + (1 - alpha_std) * D_std\n",
+    "        return new_D_ref, new_D_std\n",
+    "    \n",
+    "    def authenticate_user(self, sensor_data_json):\n",
+    "        \"\"\"\n",
+    "        Main authentication function that processes React Native sensor data\n",
+    "        \"\"\"\n",
+    "        try:\n",
+    "            # Parse sensor data from React Native\n",
+    "            if isinstance(sensor_data_json, str):\n",
+    "                sensor_data = json.loads(sensor_data_json)\n",
+    "            else:\n",
+    "                sensor_data = sensor_data_json\n",
+    "            \n",
+    "            # Extract behavioral vector from sensor data\n",
+    "            v = self.extract_behavioral_vector(sensor_data)\n",
+    "            \n",
+    "            # Update location tracking\n",
+    "            device_metrics = sensor_data.get('deviceMetrics', {})\n",
+    "            gps_location = device_metrics.get('gpsLocation')\n",
+    "            if gps_location:\n",
+    "                if self.current_loc is None:\n",
+    "                    self.current_loc = (gps_location.get('latitude', 0), gps_location.get('longitude', 0))\n",
+    "                    self.last_login_loc = self.current_loc\n",
+    "                \n",
+    "                self.prev_loc = self.latest_loc or self.current_loc\n",
+    "                self.latest_loc = (gps_location.get('latitude', 0), gps_location.get('longitude', 0))\n",
+    "            \n",
+    "            # Compute standard deviation\n",
+    "            D_std = self.estimate_std(self.D_ref)\n",
+    "            \n",
+    "            # Compute anomaly score\n",
+    "            an_score, z_scores = self.compute_anomaly_score(v, self.D_ref, D_std, self.age)\n",
+    "            \n",
+    "            # Perform rule-based checks\n",
+    "            flags, speed = self.rule_based_checks(v, sensor_data)\n",
+    "            \n",
+    "            # Decision logic\n",
+    "            decision_result = self._make_decision(an_score, flags, speed, v, D_std)\n",
+    "            \n",
+    "            # Update reference profile if appropriate\n",
+    "            if decision_result['decision'] == \"PASS\" and self.safe_to_update(v, self.D_ref, D_std):\n",
+    "                self.D_ref, D_std = self.update_reference(self.D_ref, D_std, v, self.alpha_mean, self.alpha_std)\n",
+    "                decision_result['profile_updated'] = True\n",
+    "                decision_result['new_reference'] = self.D_ref.tolist()\n",
+    "            \n",
+    "            # Prepare detailed response\n",
+    "            response = {\n",
+    "                'authentication_result': decision_result,\n",
+    "                'behavioral_vector': v.tolist(),\n",
+    "                'anomaly_score': float(an_score) if an_score is not None else None,\n",
+    "                'z_scores': z_scores.tolist() if z_scores is not None else None,\n",
+    "                'flags': flags,\n",
+    "                'speed_kmh': speed,\n",
+    "                'reference_profile': self.D_ref.tolist(),\n",
+    "                'timestamp': sensor_data.get('timestamp'),\n",
+    "                'session_info': sensor_data.get('screenInfo', {})\n",
+    "            }\n",
+    "            \n",
+    "            return response\n",
+    "            \n",
+    "        except Exception as e:\n",
+    "            return {\n",
+    "                'error': f\"Authentication failed: {str(e)}\",\n",
+    "                'authentication_result': {'decision': 'ERROR', 'confidence': 0}\n",
+    "            }\n",
+    "    \n",
+    "    def _make_decision(self, an_score, flags, speed, v, D_std):\n",
+    "        \"\"\"Make authentication decision based on computed metrics\"\"\"\n",
+    "        if an_score is None:\n",
+    "            self.idle_count += 1\n",
+    "            if self.idle_count >= self.idle_threshold and speed > 80:\n",
+    "                return {\n",
+    "                    'decision': \"ESCALATE_TO_T2\",\n",
+    "                    'reason': \"idle + fast travel\",\n",
+    "                    'confidence': 0.3,\n",
+    "                    'risk_level': 'HIGH'\n",
+    "                }\n",
+    "            else:\n",
+    "                return {\n",
+    "                    'decision': \"SKIP_INTERVAL\",\n",
+    "                    'reason': \"idle\",\n",
+    "                    'confidence': 0.5,\n",
+    "                    'risk_level': 'LOW'\n",
+    "                }\n",
+    "        else:\n",
+    "            self.idle_count = 0\n",
+    "            \n",
+    "            if an_score < self.T_PASS and not flags:\n",
+    "                return {\n",
+    "                    'decision': \"PASS\",\n",
+    "                    'reason': \"normal behavior\",\n",
+    "                    'confidence': 0.9,\n",
+    "                    'risk_level': 'LOW'\n",
+    "                }\n",
+    "            elif an_score < self.T_ESC_T2 or flags:\n",
+    "                return {\n",
+    "                    'decision': \"ESCALATE_TO_T2\",\n",
+    "                    'reason': f\"moderate anomaly (score: {an_score:.2f}, flags: {len(flags)})\",\n",
+    "                    'confidence': 0.6,\n",
+    "                    'risk_level': 'MEDIUM'\n",
+    "                }\n",
+    "            else:\n",
+    "                return {\n",
+    "                    'decision': \"ESCALATE_TO_T3\",\n",
+    "                    'reason': f\"high anomaly (score: {an_score:.2f})\",\n",
+    "                    'confidence': 0.8,\n",
+    "                    'risk_level': 'HIGH'\n",
+    "                }\n",
+    "\n",
+    "# Example usage function for React Native integration\n",
+    "def authenticate_with_sensor_data(sensor_data_json):\n",
+    "    \"\"\"\n",
+    "    Function to be called from React Native with sensor data\n",
+    "    \"\"\"\n",
+    "    authenticator = BehavioralAuthenticator()\n",
+    "    return authenticator.authenticate_user(sensor_data_json)\n"
+   ]
+  }
+ ],
+ "metadata": {
+  "kaggle": {
+   "accelerator": "none",
+   "dataSources": [],
+   "isGpuEnabled": false,
+   "isInternetEnabled": true,
+   "language": "python",
+   "sourceType": "notebook"
+  },
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.4"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 4
+}
